src/objects/FAU_Webinar_Participant__c.object
<CustomObject>
    <description>Four Acres Object to hold the program webinars which involve the participants attending to the program webinar. So this object holds information like attendence status....</description>
    <fields>
        <fullName>FAU_Bio_Fill_Deadline__c</fullName>
        <formula>DATEVALUE( FAU_Start_Time__c ) + 28</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bio Fill Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAU_End_Time__c</fullName>
        <formula>FAU_Webinar__r.FAU_End_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FAU_Has_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the participant has accepted the webinar invitation.</description>
        <inlineHelpText>Denotes that the participant has accepted the webinar invitation.</inlineHelpText>
        <label>Has Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAU_Name__c</fullName>
        <formula>FAU_Participant__r.FAU_First_Name__c + &apos; &apos; + FAU_Participant__r.FAU_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Participant_PA_s_Email__c</fullName>
        <label>Participant PA&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FAU_Participant__c</fullName>
        <label>Participant</label>
        <referenceTo>FAU_Participant__c</referenceTo>
        <relationshipLabel>Webinar Participant</relationshipLabel>
        <relationshipName>Webinar_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>FAU_Participants_Email__c</fullName>
        <label>Participants Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Participant__c</fullName>
        <formula>FAU_Participant__r.FAU_Program_Wave__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program (Participant)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Program_Webinar__c</fullName>
        <formula>FAU_Webinar__r.FAU_Program_Wave__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program (Webinar)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Start_Time__c</fullName>
        <formula>FAU_Webinar__r.FAU_Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FAU_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FAU_Title__c</fullName>
        <formula>FAU_Webinar__r.FAU_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_URL_Text__c</fullName>
        <formula>FAU_Webinar__r.FAU_URL__c</formula>
        <label>URL Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_URL__c</fullName>
        <formula>FAU_Webinar__r.FAU_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAU_Webinar__c</fullName>
        <label>Webinar</label>
        <referenceTo>FAU_Webinar__c</referenceTo>
        <relationshipLabel>Webinar Participants</relationshipLabel>
        <relationshipName>Webinar_Participants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Webinar Participant</label>
    <nameField>
        <displayFormat>WP-{0000000}</displayFormat>
        <label>Webinar Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webinar Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Webinar_and_Particpaut_use_same_Program</fullName>
        <active>true</active>
        <description>Webinar and Participant must use the same Program.</description>
        <errorConditionFormula>FAU_Participant__r.FAU_Program_Wave__c &lt;&gt;  FAU_Webinar__r.FAU_Program_Wave__c</errorConditionFormula>
        <errorDisplayField>FAU_Participant__c</errorDisplayField>
        <errorMessage>Webinar and Participant must use the same Program.
Please select a participant from the same program as the webinar.</errorMessage>
    </validationRules>
</CustomObject>